examples/test/testpolicy12466.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12466
  namespace: namespace307
spec:
  podSelector:
    matchLabels:
      key19: value2
      key25: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value22
          key3: value14
      podSelector:
        matchLabels:
          key49: value36
          key45: value25
          key14: value0
